fix: utiliser Math.clamp pour initialiser le qualityScore dans Duck